--- a/src/analysis_spring_health.Rmd
+++ b/src/analysis_spring_health.Rmd
@@ -15,7 +15,9 @@ p_load(dplyr, tidyverse, janitor, ggplot2, tsibble, formattable)
 data_spring_health <- read_csv("~/spring_health_assignment/spring_health_take_home_df.csv")
 ```
 Step: Clean data sets
-I am just getting all names to lower case snake case and make change out NAs for phq-9 total score and make numeric
+1. Lower case names
+2. Make outcome variables numeric and reclassify NAs
+3. Create a group id to track events by member over time
 ```{r}
 data_spring_health_clean =  data_spring_health %>%
   clean_names() %>%
@@ -28,10 +30,8 @@ data_spring_health_clean =  data_spring_health %>%
   mutate(id = cur_group_id()) %>%
   ungroup()
 ```
-
-
 Step: Q1 How many individuals used our platform
-Assuming the number of participants is the unique number of member_id_hashed.  It seems like each person takes both the SDS and PHQ-9
+Assuming the number of participants is the unique number of member_id_hashed.  It seems like each person takes both the SDS and PHQ-9.
 ```{r}
 number_of_participants = data_spring_health_clean %>%
   distinct(member_id_hashed) %>%
@@ -62,34 +62,30 @@ Step: Q3b Please calculate summary statistics
 ```{r}
 summary(data_spring_health_clean$phq9_score)
 ```
-Step: Q4 What is the average change in total PHQ9 score for members using the platform
+Step: Q4 What is the average change in total PHQ-9 scores for members using the platform
 ```{r}
-average_change_phq9_fun = function(data = "data_spring_health_clean")  {
-  data_out <- data_spring_health_clean %>%
-   filter(questionnaire_kind == "PHQ9") %>%
-   dplyr::select(member_id_hashed, phq9_score, id, event) %>%
-   arrange(desc(id), (event)) %>%
-   ungroup() %>%
-   group_by(id) %>%
-   # Only keep values with at least two responses
-   filter(n() > 1) %>%
-   mutate(phq9_score_change = tsibble::difference(phq9_score) / (ifelse(lag(phq9_score) == 0, 1, lag(phq9_score)))) %>%
-   ungroup() %>%
-   summarise(avg_phq9_score_change = mean(phq9_score_change, na.rm = TRUE)) %>%
-   mutate(avg_phq9_score_change = formattable::percent(avg_phq9_score_change, digits = 2))
-  return(data_out)
-}
-  
+average_change_phq9 = data_spring_health_clean %>%
+  filter(questionnaire_kind == "PHQ9") %>%
+  dplyr::select(member_id_hashed, phq9_score, id, event) %>%
+  arrange(desc(id), (event)) %>%
+  ungroup() %>%
+  group_by(id) %>%
+  # Only keep values with at least two events
+  filter(n() > 1) %>%
+  group_by(id) %>%
+  mutate(phq9_score_change = tsibble::difference(phq9_score)) %>%
+  ungroup() %>%
+  summarise(avg_phq9_score_change = mean(phq9_score_change, na.rm = TRUE)) %>%
+  mutate(avg_phq9_score_change = round(avg_phq9_score_change, 2))
 
-average_change_phq9 = average_change_phq9_fun()
+
 average_change_phq9
+
 ```
 Step: Q5 What is the average change in total PHQ9 score for depressed individuals using the platform
-
-Assuming depression at baselines means not none or N/A at baseline and removing those individuals.
+Assuming depression at baseline means excluding none or N/A at baseline and removing those individuals.
 ```{r}
-average_change_phq9_depressed_fun = function(data = "data_spring_health_clean") {
-  out_data =  data_spring_health_clean %>%
+average_change_phq9_depressed = data_spring_health_clean %>%
   filter(questionnaire_kind == "PHQ9") %>%
   mutate(filter_non_dep_baseline = if_else(event == 1 & (phq9_acuity == "N/A" | phq9_acuity == "none"), "drop", "keep")) %>%
   filter(filter_non_dep_baseline == "keep") %>%
@@ -99,32 +95,27 @@ average_change_phq9_depressed_fun = function(data = "data_spring_health_clean") 
   group_by(id) %>%
   # Only keep values with at least two responses
   filter( n() > 1 ) %>%
-  mutate(phq9_score_change = tsibble::difference(phq9_score)/(ifelse(lag(phq9_score) == 0, 1,lag(phq9_score)))) %>%
+  mutate(phq9_score_change = tsibble::difference(phq9_score)) %>%
   ungroup() %>%
   summarise(avg_phq9_score_change = mean(phq9_score_change, na.rm = TRUE)) %>%
-  mutate(avg_phq9_score_change = formattable::percent(avg_phq9_score_change, digits = 2))
-  return(out_data)
-}
+  mutate(avg_phq9_score_change = round(avg_phq9_score_change,  2))
    
-
-
-average_change_phq9_depressed = average_change_phq9_depressed_fun()
 average_change_phq9_depressed
 ```
 Step: Q6 What is the average change in total workplace productivity (SDS_days_unproductive) for members interacting with the platform
 ```{r}
 avg_work_productivity_fun = function(data = "data_spring_health_clean") {
   data_out = data_spring_health_clean %>%
-      dplyr::select(member_id_hashed, id, event, sds_days_unproductive) %>%
-  arrange(desc(id), (event)) %>%
+    dplyr::select(member_id_hashed, id, event, sds_days_unproductive) %>%
+    arrange(desc(id), (event)) %>%
     ungroup() %>%
     group_by(id) %>%
     # Only keep values with at least two responses
     filter(n() > 1) %>%
-    mutate(sds_days_score_change = tsibble::difference(sds_days_unproductive) / (ifelse(lag(sds_days_unproductive) == 0, 1, lag(sds_days_unproductive)))) %>%
+    mutate(sds_days_score_change = tsibble::difference(sds_days_unproductive)) %>%
     ungroup() %>%
     summarise(sds_days_score_change = mean(sds_days_score_change, na.rm = TRUE)) %>%
-    mutate(sds_days_score_change = formattable::percent(sds_days_score_change, digits = 2))
+    mutate(sds_days_score_change = round(sds_days_score_change, 2))
   return(data_out)
 }
 
@@ -144,7 +135,7 @@ phq_9_improvement = data_spring_health_clean %>%
   group_by(id) %>%
   # Only keep values with at least two responses
   filter( n() > 1 ) %>%
-  mutate(phq9_score_change = tsibble::difference(phq9_score)/(ifelse(lag(phq9_score) == 0, 1,lag(phq9_score)))) %>%
+  mutate(phq9_score_change = tsibble::difference(phq9_score)) %>%
   ungroup() %>%
   dplyr::select(phq9_score_change)
 
@@ -155,12 +146,12 @@ sds_improvement = data_spring_health_clean %>%
   group_by(id) %>%
   # Only keep values with at least two responses
   filter( n() > 1 ) %>%
-  mutate(sds_days_score_change = tsibble::difference(sds_days_unproductive)/(ifelse(lag(sds_days_unproductive) == 0, 1,lag(sds_days_unproductive)))) %>%
+  mutate(sds_days_score_change = tsibble::difference(sds_days_unproductive)) %>%
   ungroup() %>%
   dplyr::select(sds_days_score_change)
 
 ```
-Step: Conduct non-parameteric wilcox tests to evaluate statistical differenes
+Step: Conduct non-parametric Wilcox tests to evaluate statistical differences
 ```{r}
 phq9_results =  wilcox.test(phq_9_improvement$phq9_score_change, mu = 0)
 phq9_results
@@ -171,5 +162,5 @@ sds_results
 ```
 Q7b Do you think that members benefit from interacting with the Spring platform? Why?
 
-According to my analysis, both PHQ-9 and unproductive SDS days average percentage change are statistically significantly greater than zero and both percentage changes are positive indicating there is evidence the Spring Health platform is not effective at reducing these two outcomes. 
+According to my analysis, both PHQ-9 and unproductive SDS days average change are not statistically significantly different from zero indicating there is no evidence the Spring Health platform is effective at reducing these two outcomes. 
 
